Kinesis io with enhanced fan out (round 2) (#6)
* Fix KinesisRecordCoder
* Mounted savepoints; Add logging
* Test runs with KinesisSourceOptions
* Include shard id into output data
* Adjust jobs parallelism
* Add more spark commands for data checks